# password-strength-detector

./: .gitignore  README.md  pyproject.toml
src/password_strength/: checker.py  cli.py
src/password_strength_detector.egg-info/: PKG-INFO  SOURCES.txt
tests/: old_password_strength_script.py  test_checker.py
