[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "password-strength-detector"
version = "0.1.0"
description = "Password strength detector with entropy scoring and pattern checks."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Kevin"}]
dependencies = []

[project.scripts]
pw-strength = "password_strength.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
